Changed error msg and empty comma